css fix overflow

--- a/styles/message-input.module.scss
+++ b/styles/message-input.module.scss
@@ -10,6 +10,8 @@
         border-radius: var(--radius-4);
         border: var(--border-size-2) solid var(--text-2);
         padding: var(--size-2) var(--size-3);
+        max-height: 15rem;
+        overflow-y: scroll;
         
         &.placeholder::before {
             content: 'Aa';
