--- a/styles/messages.module.scss
+++ b/styles/messages.module.scss
@@ -3,6 +3,7 @@
     flex-direction: column;
     gap: var(--size-3);
     flex-grow: 1;
+    overflow-y: scroll;
     padding: var(--size-3);
 
     .message {
